[gd_scene load_steps=11 format=2]

[ext_resource path="res://world/cargo_hold/time_skip.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/cargo_hold/cargo_hold.gd" type="Script" id=2]
[ext_resource path="res://stuff/air_lock.tscn" type="PackedScene" id=4]
[ext_resource path="res://stuff/cargo_deleter.tscn" type="PackedScene" id=5]
[ext_resource path="res://stuff/bio_scanner.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62, 440 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 720, 30 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 211.5, 20 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 345, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 65.5, 20.5 )

[node name="CargoHold" type="Node2D"]
script = ExtResource( 2 )
travel_speed = 10.0

[node name="OuterWalls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( -17, 368 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 1098, -268 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 1219, 811 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 658, 37 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2( 651, 652 )
shape = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="OuterWalls"]
points = PoolVector2Array( 25, 50, 20, 642, 1175, 640, 1167, 372 )
width = 40.0

[node name="Line2D2" type="Line2D" parent="OuterWalls"]
points = PoolVector2Array( 5, 56, 1046, 57, 1043, 161, 1272, 161 )
width = 20.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="Polygon2D" type="Polygon2D" parent="OuterWalls"]
position = Vector2( 1138, 48 )
color = Color( 0.4, 0.501961, 1, 1 )
offset = Vector2( -1125, -46 )
polygon = PoolVector2Array( 1040, 52, 1044, 161, 1277, 166, 1279, -37, 1033, -36 )

[node name="Polygon2D2" type="Polygon2D" parent="OuterWalls"]
position = Vector2( 1297, 491 )
color = Color( 0.4, 0.501961, 1, 1 )
offset = Vector2( -1125, -46 )
polygon = PoolVector2Array( 1011, 211, 1359, 206, 1113, -116, 997, -89 )

[node name="CargoShelfs" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CargoShelfs"]
position = Vector2( 1070.5, 351 )
shape = SubResource( 5 )

[node name="Line2D" type="Line2D" parent="CargoShelfs/CollisionShape2D2"]
position = Vector2( -54, 0 )
points = PoolVector2Array( 263.5, 1, -155.5, -1 )
width = 40.0

[node name="CollisionShape2D3" type="CollisionShape2D" parent="CargoShelfs"]
position = Vector2( 383, 350 )
shape = SubResource( 4 )

[node name="Line2D" type="Line2D" parent="CargoShelfs/CollisionShape2D3"]
points = PoolVector2Array( 345, -2, -343.5, -1 )
width = 40.0

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 76, 71 )
polygon = PoolVector2Array( -29, 93, 643, 100, 647, 2, -33, 4 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2( 49, 568 )
color = Color( 1, 0, 0, 1 )
polygon = PoolVector2Array( 1, 41, 234, 43, 233, -187, -1, -192 )

[node name="TextureProgress" type="ProgressBar" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 1119.0
margin_bottom = 46.0

[node name="Bio-Scanner" parent="." instance=ExtResource( 7 )]
position = Vector2( 355, 120 )

[node name="AirLock" parent="." instance=ExtResource( 4 )]
position = Vector2( 1095, 332 )

[node name="Button" type="Button" parent="."]
margin_left = 1155.0
margin_top = 22.0
margin_right = 1232.0
margin_bottom = 42.0
text = "take a nap"

[node name="CargoDeleter" parent="." instance=ExtResource( 5 )]
position = Vector2( 1434, 254 )

[node name="TimeSkip" parent="." instance=ExtResource( 1 )]

[node name="UpperCargoSpawn" type="Node2D" parent="."]
position = Vector2( 386, 290 )

[node name="Position2D7" type="Position2D" parent="UpperCargoSpawn"]
position = Vector2( -300, 0 )

[node name="Position2D6" type="Position2D" parent="UpperCargoSpawn"]
position = Vector2( -240, 0 )

[node name="Position2D5" type="Position2D" parent="UpperCargoSpawn"]
position = Vector2( -180, 0 )

[node name="Position2D4" type="Position2D" parent="UpperCargoSpawn"]
position = Vector2( -120, 0 )

[node name="Position2D3" type="Position2D" parent="UpperCargoSpawn"]
position = Vector2( -60, 0 )

[node name="Position2D8" type="Position2D" parent="UpperCargoSpawn"]

[node name="Position2D" type="Position2D" parent="UpperCargoSpawn"]
position = Vector2( 60, 0 )

[node name="Position2D2" type="Position2D" parent="UpperCargoSpawn"]
position = Vector2( 120, 0 )

[node name="DaySpecificStuff" type="Node2D" parent="."]

[node name="ExtraShelf" type="StaticBody2D" parent="DaySpecificStuff"]
position = Vector2( 796, 348 )
collision_layer = 2
collision_mask = 4

[node name="Line2D" type="Line2D" parent="DaySpecificStuff/ExtraShelf"]
points = PoolVector2Array( -67, 2, 64, 2 )
width = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DaySpecificStuff/ExtraShelf"]
position = Vector2( -1.5, 2.5 )
shape = SubResource( 6 )

[node name="PlaceElevatorHere" type="Node2D" parent="DaySpecificStuff"]
position = Vector2( 728, -12 )

[node name="BottomBlackout" type="Polygon2D" parent="DaySpecificStuff"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 42, 366, 43, 618, 1155, 621, 1150, 370 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="CargoDeleter" to="." method="_on_CargoDeleter_body_entered"]
